--- a/julia/PKGBUILD
+++ b/julia/PKGBUILD
@@ -1,5 +1,6 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
-# Maintainer: Alexander F. Rødseth <xyproto@archlinux.org>
+# Maintainer: Antonio Rojas <arojas@archlinux.org>
+# Contributor: Alexander F. Rødseth <xyproto@archlinux.org>
 # Contributor: Eli Schwartz <eschwartz@archlinux.org>
 # Contributor: Lex Black <autumn-wind@web.de>
 # Contributor: Michael Jakl <jakl.michael@gmail.com>
@@ -8,32 +9,61 @@
 
 pkgname=julia
 epoch=2
-pkgver=1.6.2
+pkgver=1.7.2
 pkgrel=1
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le powerpc riscv64)
 pkgdesc='High-level, high-performance, dynamic programming language'
 url='https://julialang.org/'
 license=(MIT)
 depends=(cblas fftw hicolor-icon-theme libgit2 libunwind libutf8proc openblas
-         suitesparse mbedtls openlibm pcre2 llvm-libs p7zip)
-makedepends=(cmake gcc-fortran python llvm patchelf)
+	suitesparse mbedtls openlibm pcre2 llvm-libs p7zip)
+depends_powerpc64le=(libblastrampoline)
+makedepends=(cmake gcc-fortran python llvm patchelf libwhich)
 optdepends=('gnuplot: If using the Gaston Package from julia')
 replaces=(julia-docs)
 source=(https://github.com/JuliaLang/julia/releases/download/v$pkgver/$pkgname-$pkgver-full.tar.gz{,.asc}
+        https://github.com/JuliaLang/julia/commit/677ce6d3.patch
+        https://github.com/JuliaLang/julia/commit/47f9139e.patch
+        https://github.com/JuliaLang/julia/commit/1eb063f1.patch
+        f8c918b0.patch
+        63303980.patch
+        julia-libgit-1.2.patch
         julia-system-cblas.patch
         julia-hardcoded-libs.patch
-        make-install-no-build.patch)
+        make-install-no-build.patch
+        julia-llvm-patchelf.patch
+        julia-libunwind-1.6.patch
+        julia-curl-7.81.patch)
 backup=(etc/julia/startup.jl)
-sha256sums=('01241120515cb9435b96179cf301fbd2c24d4405f252588108d13ceac0f41c0a'
+sha256sums=('add869121b7e788ff487a234fd39484469dbb3ded29b17041c63c4757515dd58'
             'SKIP'
-            'e44c260e4111908337caa82e1c3fef563b9d40e0a30da68d6e91405bf6db24dc'
-            '7497bff3cc6faac0a0664e620fd5525d7bb19d1bc3d2ff7f4d900dc36d476ceb'
-            '8be4605f92a009072ca7e843549c225fc4e959893498e7c4f8f79e861e63714d')
+            'a798c58ab518def84e4112538de59a10802e7dc854c20b08990a1619ba2aa95b'
+            'c76c6fbb4e04b185d11e3c3e0aec99a2088f3b06621ce61d29cd21227a044a7a'
+            '37130eabce304a01c1de389b4596905a3f33881f46f3f04a87f0738668e13985'
+            'bc6c85cbbca489ef0b2876dbeb6ae493c11573e058507b8bcb9e01273bc3a38c'
+            'ce9cd140c3bc39987d60340bf365d6238e79cf4d5385494272c49c64af22ef78'
+            'c57ea92a11fa8dac72229e6a912d2372ec0d98d63486426fe3bdeeb795de48f7'
+            '8f8c12853ce847f5d1b5a4a461ddec701decdb81dae7bb31d66560c1deaed97a'
+            '03043f005c133ac9af1d4dc113ea8b525ad3b393690625be77975f0e29dd6457'
+            '8be4605f92a009072ca7e843549c225fc4e959893498e7c4f8f79e861e63714d'
+            '6048c69c987f33f2b17d78b63368b0762d1d6a1e531ef9932d0c23bda49d1384'
+            '3afa172e8b54ce48e77542677b2b7143199d444bfeed39be1644ce88b513a3d0'
+            '710587dd88c7698dc5cdf47a1a50f6f144b584b7d9ffb85fac3f5f79c65fce11')
 validpgpkeys=('3673DF529D9049477F76B37566E3C7DC03D6E495') # Julia (Binary signing key) <buildbot@julialang.org>
 
 prepare() {
   cd $pkgname-$pkgver
 
+# fix build with LLVM 13
+  patch -p1 -i ../677ce6d3.patch
+  patch -p1 -i ../47f9139e.patch
+  patch -p1 -i ../1eb063f1.patch
+  patch -p1 -i ../f8c918b0.patch
+  patch -p1 -i ../63303980.patch
+# libgit2 1.2 compatibility
+  patch -p1 -i ../julia-libgit-1.2.patch
+# libunwind 1.6 compatibility
+  patch -p1 -i ../julia-libunwind-1.6.patch
 # Add and use option to build with system cblas
   patch -p1 -i ../julia-system-cblas.patch # Add and use option to build with system cblas
 # Don't hardcode library names
@@ -42,6 +72,17 @@ prepare() {
   patch -p1 -i ../make-install-no-build.patch
 # Fix test failure
   sed -e 's|0.22314355f0 + 3.1415927f0im|0.22314355f0 - 3.1415927f0im|' -i stdlib/LinearAlgebra/test/lu.jl
+# Don't try to run patchelf on system LLVM
+  patch -p1 -i ../julia-llvm-patchelf.patch
+
+# Fix segfault with curl 7.81
+  cd stdlib/srccache
+  tar -xzf Downloads-26d79afcde9cf837a331fce023b31f1d3699700c.tar.gz
+  patch -d JuliaLang-Downloads.jl-26d79af -p1 < "$srcdir"/julia-curl-7.81.patch
+  rm Downloads-26d79afcde9cf837a331fce023b31f1d3699700c.tar.gz
+  tar -czf Downloads-26d79afcde9cf837a331fce023b31f1d3699700c.tar.gz JuliaLang-Downloads.jl-26d79af
+  md5sum Downloads-26d79afcde9cf837a331fce023b31f1d3699700c.tar.gz | cut -d ' ' -f 1 > ../../deps/checksums/Downloads-26d79afcde9cf837a331fce023b31f1d3699700c.tar.gz/md5
+  sha512sum Downloads-26d79afcde9cf837a331fce023b31f1d3699700c.tar.gz | cut -d ' ' -f 1 > ../../deps/checksums/Downloads-26d79afcde9cf837a331fce023b31f1d3699700c.tar.gz/sha512
 }
 
 _buildopts="prefix=/usr \
@@ -57,7 +98,8 @@ _buildopts="prefix=/usr \
     USE_SYSTEM_LAPACK=1 \
     USE_SYSTEM_GMP=1 \
     USE_SYSTEM_MPFR=1 \
-    USE_SYSTEM_SUITESPARSE=1 \
+    USE_SYSTEM_LIBSUITESPARSE=1 \
+    USE_SYSTEM_LIBWHICH=1 \
     USE_SYSTEM_DSFMT=0 \
     USE_SYSTEM_LIBUV=0 \
     USE_SYSTEM_UTF8PROC=1 \
@@ -71,14 +113,13 @@ _buildopts="prefix=/usr \
     USE_SYSTEM_OPENLIBM=1"
 
 case "${CARCH}" in
-  x86_64) _buildopts+=" MARCH=x86-64" ;;
+  x86_64) _buildopts+=" MARCH=x86-64 USE_SYSTEM_LIBBLASTRAMPOLINE=1" ;;
+  powerpc64le) _buildopts+=" USE_SYSTEM_LIBBLASTRAMPOLINE=1" ;;
 esac
 
 build() {
   cd $pkgname-$pkgver
   make release VERBOSE=1 JLDFLAGS=${LDFLAGS} $_buildopts
-
-  ln -s /usr/lib/libopenblas.so usr/lib/julia/libopenblas64_.so # Needed for tests
 }
 
 check() {
@@ -87,7 +128,7 @@ check() {
   # this is the make testall target, plus the --skip option from
   # travis/appveyor/circleci (one test fails with DNS resolution errors)
   # Also skip tests that check for a hardcoded version number
-  ../julia --check-bounds=yes --startup-file=no ./runtests.jl all \
+  ../julia --check-bounds=yes --startup-file=no ./runtests.jl \
     --skip Sockets \
     --skip broadcast \
     --skip Distributed \
@@ -96,6 +137,7 @@ check() {
     --skip LibCURL \
     --skip LibSSH2_jll \
     --skip MbedTLS_jll \
+    --skip MPFR_jll \
     --skip SuiteSparse_jll \
     --skip PCRE2_jll \
     --skip LibGit2_jll \
@@ -115,3 +157,17 @@ package() {
   rm "$pkgdir"/usr/lib/julia/libccalltest.so.debug # Remove debug testing library
   install -Dm644 LICENSE.md -t "$pkgdir"/usr/share/licenses/$pkgname
 }
+sha256sums=('c1b4f1f75aac34c40e81805cba2d87f1e72f9ce1405a525273c3688eee12366f'
+            'SKIP'
+            'a798c58ab518def84e4112538de59a10802e7dc854c20b08990a1619ba2aa95b'
+            'c76c6fbb4e04b185d11e3c3e0aec99a2088f3b06621ce61d29cd21227a044a7a'
+            '37130eabce304a01c1de389b4596905a3f33881f46f3f04a87f0738668e13985'
+            'bc6c85cbbca489ef0b2876dbeb6ae493c11573e058507b8bcb9e01273bc3a38c'
+            'ce9cd140c3bc39987d60340bf365d6238e79cf4d5385494272c49c64af22ef78'
+            'c57ea92a11fa8dac72229e6a912d2372ec0d98d63486426fe3bdeeb795de48f7'
+            '8f8c12853ce847f5d1b5a4a461ddec701decdb81dae7bb31d66560c1deaed97a'
+            '03043f005c133ac9af1d4dc113ea8b525ad3b393690625be77975f0e29dd6457'
+            '8be4605f92a009072ca7e843549c225fc4e959893498e7c4f8f79e861e63714d'
+            '6048c69c987f33f2b17d78b63368b0762d1d6a1e531ef9932d0c23bda49d1384'
+            '3afa172e8b54ce48e77542677b2b7143199d444bfeed39be1644ce88b513a3d0'
+            '710587dd88c7698dc5cdf47a1a50f6f144b584b7d9ffb85fac3f5f79c65fce11')
