--- a/bcunit/PKGBUILD
+++ b/bcunit/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=3.0.2+12+g3c720fb
 _commit=3c720fbf67dd3c02b0c7011ed4036982b2c93532
 pkgrel=2
 pkgdesc="Lightweight system for writing, administering, and running unit tests in C"
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://github.com/BelledonneCommunications/bcunit"
 license=(LGPL)
 depends=(glibc)
