--- a/bzrtp/PKGBUILD
+++ b/bzrtp/PKGBUILD
@@ -2,16 +2,16 @@
 # Maintainer: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=bzrtp
-pkgver=5.0.32
+pkgver=5.0.66
 pkgrel=1
 pkgdesc='Open source implementation of ZRTP keys exchange protocol'
-arch=(x86_64 powerpc64le powerpc)
-url='https://github.com/BelledonneCommunications/bzrtp'
+arch=(x86_64 powerpc64le powerpc riscv64)
+url='https://gitlab.linphone.org/'
 license=(GPL2)
 depends=(libxml2 bctoolbox sqlite)
 makedepends=(bcunit cmake)
-source=(https://github.com/BelledonneCommunications/bzrtp/archive/$pkgver/$pkgname-$pkgver.tar.gz)
-sha256sums=('17f4c4a4da792dc1126021fae3299bc7e8862af872bb98adc7de58459e83e7c2')
+source=(https://gitlab.linphone.org/BC/public/$pkgname/-/archive/$pkgver/$pkgname-$pkgver.tar.bz2)
+sha256sums=('1dd452035456ae325ea835fc0a49a6cc00448c5b4ec7b21b9dc9d63a434b9854')
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
