--- a/qt5/qt5-quickcontrols2/PKGBUILD
+++ b/qt5/qt5-quickcontrols2/PKGBUILD
@@ -3,9 +3,9 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=qt5-quickcontrols2
-pkgver=5.15.2+kde+r10
-pkgrel=1
-_commit=b092b19a18d14e70beae6afebc6bde5d83e9eed7
+pkgver=5.15.2+kde+r11
+pkgrel=2
+_commit=d8d6b14b9907adbc6ce307d52be34aaa761a58fa
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.qt.io'
 license=('GPL3' 'LGPL3' 'FDL' 'custom')
@@ -17,6 +17,7 @@ groups=('qt' 'qt5')
 _pkgfqn=qtquickcontrols2
 source=(git+https://invent.kde.org/qt/qt/$_pkgfqn#commit=$_commit)
 sha256sums=('SKIP')
+options=(debug)
 
 pkgver() {
   cd $_pkgfqn
