--- a/gtk3/PKGBUILD
+++ b/gtk3/PKGBUILD
@@ -5,7 +5,7 @@
 pkgbase=gtk3
 pkgname=(gtk3 gtk3-docs gtk3-demos)
 pkgver=3.24.31
-pkgrel=1
+pkgrel=3
 epoch=1
 pkgdesc="GObject-based multi-platform GUI toolkit"
 arch=(x86_64 powerpc64le powerpc riscv64)
@@ -14,8 +14,7 @@ depends=(atk cairo libxcursor libxinerama libxrandr libxi libepoxy gdk-pixbuf2
          dconf libxcomposite libxdamage pango shared-mime-info at-spi2-atk
          wayland libxkbcommon adwaita-icon-theme json-glib librsvg
          desktop-file-utils mesa cantarell-fonts libcolord rest libcups
-         libcanberra fribidi iso-codes libcloudproviders tracker3
-         gtk-update-icon-cache)
+         fribidi iso-codes libcloudproviders tracker3 gtk-update-icon-cache)
 makedepends=(gobject-introspection gtk-doc git glib2-docs sassc meson
              wayland-protocols)
 license=(LGPL)
@@ -60,6 +59,7 @@ _pick() {
 }
 
 package_gtk3() {
+  optdepends=('evince: Default print preview command')
   provides=(gtk3-print-backends libgtk-3.so libgdk-3.so libgailutil-3.so)
   conflicts=(gtk3-print-backends)
   replaces=("gtk3-print-backends<=3.22.26-1")
