--- a/sdl/PKGBUILD
+++ b/sdl/PKGBUILD
@@ -6,6 +6,7 @@
 pkgname=sdl
 pkgver=1.2.15+r406+gf1caf909
 pkgrel=1
+epoch=1
 pkgdesc="A library for portable low-level access to a video framebuffer, audio output, mouse, and keyboard"
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.libsdl.org"
@@ -22,10 +23,10 @@ source=("git+https://github.com/libsdl-org/SDL-1.2#commit=$_commit"
         0003-sdl-1.2.14-fix-mouse-clicking.patch
         0004-sdl-1.2.14-disable-mmx.patch)
 sha256sums=('SKIP'
-            'b242b28ab9b2d823d96f0939c6fb2fbaabb110b9e61be754f6cf502a34d57a2f'
-            '0a5d00c1f75158b1838706a0733a51c8c1014983528bafb4a477327f7595e135'
-            '70e339886440f94f03a320c4b8605a2704f3e3117aa9e998f32b0cebc3e4bc59'
-            'a99bb91981e091bb01bbedf5138008ef16155c9a6b24349a771555c9bb57fdcd')
+            '658a3467f285201431a274339bd5b35a15c6b12156d8b19b21d66546ab8512bc'
+            '786c55a1e2c3bd5d68d5649d6f4325ec22109ea3453e73d8d173966798a36538'
+            'c2be5af8e1fe36d3771972de4575d30b48372bb94f53433a3ae8cff030d1724d'
+            '62275b1b2f8e79d5f12126a79994733dcd13d62954391fcdf93c76f35fde55a0')
 validpgpkeys=('1528635D8053A57F77D1E08630A59377A7763BE6') # Sam Lantinga <slouken@libsdl.org>
 
 pkgver() {
@@ -49,6 +50,7 @@ prepare() {
 
 build() {
   cd SDL-1.2
+
   case "${CARCH}" in
     powerpc*) 
       PLATFORM_CONFIGURE_FLAGS="--enable-altivec=no"
@@ -58,8 +60,8 @@ build() {
   esac
 
   CFLAGS+=' -ffat-lto-objects'
-  ./configure --prefix=/usr --disable-nasm --enable-alsa --build=${CHOST} \
-              --with-x --disable-rpath --disable-static $PLATFORM_CONFIGURE_FLAGS
+  ./configure --prefix=/usr --disable-nasm --enable-alsa \
+              --with-x --disable-rpath --disable-static ${PLATFORM_CONFIGURE_FLAGS}
   make
 }
 
