--- a/libsidplay/PKGBUILD
+++ b/libsidplay/PKGBUILD
@@ -4,9 +4,9 @@
 
 pkgname=libsidplay
 pkgver=1.36.59
-pkgrel=10
+pkgrel=10.1
 pkgdesc="A library for playing SID music files."
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://critical.ch/distfiles/"
 license=('GPL')
 depends=('gcc-libs')
