--- a/libcddb/PKGBUILD
+++ b/libcddb/PKGBUILD
@@ -3,8 +3,8 @@
 # Contributor: Sarah Hay <sarahhay@mb.sympatico.ca>
 pkgname=libcddb
 pkgver=1.3.2
-pkgrel=6
-arch=( x86_64 powerpc64le powerpc )
+pkgrel=6.1
+arch=(x86_64 powerpc64le powerpc riscv64)
 pkgdesc="Library that implements the different protocols (CDDBP, HTTP, SMTP) to access data on a CDDB server (e.g. http://freedb.org)."
 url="https://sourceforge.net/projects/libcddb/"
 license=('LGPL')
