--- a/libcdio/PKGBUILD
+++ b/libcdio/PKGBUILD
@@ -4,10 +4,10 @@
 
 pkgname=libcdio
 pkgver=2.1.0
-pkgrel=2
+pkgrel=2.1
 pkgdesc="GNU Compact Disc Input and Control Library"
 url="https://www.gnu.org/software/libcdio/"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL3)
 depends=(libcddb ncurses gcc-libs)
 source=(https://ftp.gnu.org/gnu/libcdio/$pkgname-$pkgver.tar.bz2{,.sig})
