--- a/qt5/qt5-tools/PKGBUILD
+++ b/qt5/qt5-tools/PKGBUILD
@@ -1,16 +1,17 @@
+# POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: Felix Yan <felixonmars@archlinux.org>
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=qt5-tools
 pkgver=5.15.2+kde+r17
-pkgrel=4
+pkgrel=6
 _commit=33693a928986006d79c1ee743733cde5966ac402
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.qt.io'
 license=('GPL3' 'LGPL3' 'FDL' 'custom')
 pkgdesc='A cross-platform application and UI framework (Development Tools, QtHelp)'
 depends=('qt5-base' 'hicolor-icon-theme')
-makedepends=('qt5-declarative' 'vulkan-headers' 'clang' 'git')
+makedepends=('qt5-declarative' 'vulkan-headers' 'clang' 'qt5-webkit' 'git')
 optdepends=('clang: for qdoc' 'qt5-webkit: for Qt Assistant')
 groups=('qt' 'qt5')
 conflicts=('qtchooser')
@@ -22,6 +23,7 @@ sha256sums=('SKIP'
             '92f3e5dc8bc416e02893c38a05287238853e0c20732df1e62d6a672744a34e7c'
             '15781519115e36d2c67c12ee6bc636425cd445072f43cb8bdd1364cfacbe4c45'
             '6bc07903971983efb9492700efb2c03e24fbb1ce61b520b6e7d0a04662400701')
+options=(debug)
 
 pkgver() {
   cd $_pkgfqn
@@ -38,7 +40,7 @@ prepare() {
 build() {
   cd build
 
-  qmake ../${_pkgfqn}
+  qmake ../${_pkgfqn} CONFIG+=fat-static-lto
   make
 }
 
