--- a/gtk3/PKGBUILD
+++ b/gtk3/PKGBUILD
@@ -4,8 +4,8 @@
 
 pkgbase=gtk3
 pkgname=(gtk3 gtk3-docs gtk3-demos)
-pkgver=3.24.31
-pkgrel=3
+pkgver=3.24.33
+pkgrel=1
 epoch=1
 pkgdesc="GObject-based multi-platform GUI toolkit"
 arch=(x86_64 powerpc64le powerpc riscv64)
@@ -18,7 +18,7 @@ depends=(atk cairo libxcursor libxinerama libxrandr libxi libepoxy gdk-pixbuf2
 makedepends=(gobject-introspection gtk-doc git glib2-docs sassc meson
              wayland-protocols)
 license=(LGPL)
-_commit=ab45bde94c7bbd140b12fa0dd6203f7b98d1a715  # tags/3.24.31^0
+_commit=8ff9b2f83ff491cbfcbf9b30c706bd917679e7cc  # tags/3.24.33^0
 source=("git+https://gitlab.gnome.org/GNOME/gtk.git#commit=$_commit"
         gtk-query-immodules-3.0.hook)
 sha256sums=('SKIP'
@@ -85,7 +85,7 @@ END
 
   _pick demo usr/bin/gtk3-{demo,demo-application,icon-browser,widget-factory}
   _pick demo usr/share/applications/gtk3-{demo,icon-browser,widget-factory}.desktop
-  _pick demo usr/share/glib-2.0/schemas/org.gtk.Demo.gschema.xml
+  _pick demo usr/share/glib-2.0/schemas/org.gtk.{Demo,exampleapp}.gschema.xml
   _pick demo usr/share/icons/hicolor/*/apps/gtk3-{demo,widget-factory}[-.]*
   _pick demo usr/share/man/man1/gtk3-{demo,demo-application,icon-browser,widget-factory}.1
 }
