--- a/gjs/PKGBUILD
+++ b/gjs/PKGBUILD
@@ -3,35 +3,37 @@
 # Contributor: Ionut Biru <ibiru@archlinux.org>
 
 pkgname=gjs
-pkgver=1.68.3
+pkgver=1.70.1
 pkgrel=2
 epoch=2
 pkgdesc="Javascript Bindings for GNOME"
 url="https://wiki.gnome.org/Projects/Gjs"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL)
-depends=(cairo gobject-introspection-runtime js78 dconf readline)
+depends=(cairo gobject-introspection-runtime js78 dconf readline
+         libsysprof-capture)
 makedepends=(gobject-introspection git meson dbus)
-checkdepends=(valgrind xorg-server-xvfb gtk3 gtk4)
+checkdepends=(xorg-server-xvfb gtk3 gtk4)
 provides=(libgjs.so)
-_commit=44999624184db531715fcf65721c1882b4a748bc  # tags/1.68.3^0
+_commit=f17afbffec385030c1b47dab992f7e08232fea50  # tags/1.70.1^0
 source=("git+https://gitlab.gnome.org/GNOME/gjs.git#commit=$_commit")
 sha256sums=('SKIP')
 
 pkgver() {
-  cd $pkgname
-  git describe --tags | sed 's/-/+/g'
+  cd gjs
+  git describe --tags | sed 's/[^-]*-g/r&/;s/-/+/g'
 }
 
 prepare() {
-  cd $pkgname
+  cd gjs
 }
 
 build() {
-  arch-meson $pkgname build \
-    --buildtype release \
-    -D installed_tests=false \
-    -D profiler=disabled
+  CFLAGS="${CFLAGS/-O2/-O3} -fno-semantic-interposition"
+  CXXFLAGS="${CXXFLAGS/-O2/-O3} -fno-semantic-interposition"
+  LDFLAGS+=" -Wl,-Bsymbolic-functions"
+
+  arch-meson gjs build -D installed_tests=false
   meson compile -C build
 }
 
@@ -44,3 +46,5 @@ package() {
   depends+=(libreadline.so)
   meson install -C build --destdir "$pkgdir"
 }
+
+# vim:set sw=2 et:
