--- a/ostree/PKGBUILD
+++ b/ostree/PKGBUILD
@@ -1,50 +1,45 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: David Runge <dvzrv@archlinux.org>
-# Contributor: Jan Alexander Steffens (heftig) <jan.steffens@gmail.com>
+# Contributor: Jan Alexander Steffens (heftig) <heftig@archlinux.org>
 # Contributor: Mirco Tischler <mt-ml at gmx dot de>
 
 _name=libostree
 pkgname=ostree
-pkgver=2021.5
-_commit='63bf5e606b24c7343bfe622bf6af2110ee6beabc' # 2021.5
+pkgver=2022.2
+_commit=fbc6d21c2f71099fbab44cbdd74222b91f61c667  # tags/v2022.2^{}
 pkgrel=1
 pkgdesc="Operating system and container binary deployment and upgrades"
-url="https://ostree.readthedocs.org/en/latest/"
-arch=(x86_64 powerpc64le powerpc)
-license=('GPL2')
-depends=('fuse2' 'glibc' 'libgpg-error' 'libsodium' 'util-linux' 'openssl' 'xz'
-'zlib')
-makedepends=('avahi' 'e2fsprogs' 'git' 'glib2' 'gobject-introspection' 'gpgme'
-'gtk-doc' 'libarchive' 'libsoup' libxslt 'mkinitcpio' 'python' 'systemd')
-checkdepends=('cpio' 'elfutils' 'gjs' 'parallel' 'python-yaml')
-checkdepends_x86_64=('syslinux')
-provides=('libostree-1.so')
+url="https://ostreedev.github.io/ostree/"
+arch=(x86_64 powerpc64le powerpc riscv64)
+license=(GPL)
+depends=(fuse2 glibc libgpg-error libsodium util-linux openssl xz zlib)
+makedepends=(avahi e2fsprogs git glib2 gobject-introspection gpgme gtk-doc
+             libarchive libsoup libxslt mkinitcpio python systemd)
+checkdepends=(cpio elfutils gjs parallel python-yaml syslinux)
 source=("git+https://github.com/ostreedev/ostree#commit=${_commit}"
         "git+https://github.com/mendsley/bsdiff"
         "git+https://gitlab.gnome.org/GNOME/libglnx.git")
-sha512sums=('SKIP'
-            'SKIP'
-            'SKIP')
 b2sums=('SKIP'
         'SKIP'
         'SKIP')
+
 # upstream ticket about chain of trust:
 # https://github.com/ostreedev/ostree/issues/2349
 validpgpkeys=('1CEC7A9DF7DA85ABEF843DC0A866D7CCAE087291') # Colin Walters <walters@redhat.com>
 
 prepare() {
-  cd "$pkgname"
+  cd $pkgname
 
   git submodule init
-  git config --local submodule.bsdiff.url "$srcdir/bsdiff"
-  git config --local submodule.libglnx.url "$srcdir/libglnx"
+  git submodule set-url bsdiff "$srcdir/bsdiff"
+  git submodule set-url libglnx "$srcdir/libglnx"
   git submodule update
 
   NOCONFIGURE=1 ./autogen.sh
 }
 
 build() {
-  cd "$pkgname"
+  cd $pkgname
 
   ./configure \
     --prefix=/usr \
@@ -68,15 +63,14 @@ build() {
 }
 
 check() {
-  cd "$pkgname"
-  make check -k || echo "Known to fail: https://github.com/ostreedev/ostree/issues/2313"
+  make check -k -C $pkgname || echo "Known to fail: https://github.com/ostreedev/ostree/issues/2313"
 }
 
 package() {
-  depends+=('libarchive.so' 'libavahi-client.so' 'libavahi-common.so'
-  'libavahi-glib.so' 'libgio-2.0.so' 'libglib-2.0.so' 'libgobject-2.0.so'
-  'libgpgme.so' 'libsoup-2.4.so' 'libsystemd.so')
+  depends+=(libarchive.so libavahi-client.so libavahi-common.so
+            libavahi-glib.so libgio-2.0.so libglib-2.0.so libgobject-2.0.so
+            libgpgme.so libsoup-2.4.so libsystemd.so)
+  provides+=(libostree-1.so)
 
-  cd "$pkgname"
-  make DESTDIR="$pkgdir" install
+  make DESTDIR="$pkgdir" install -C $pkgname
 }
