--- a/appstream-glib/PKGBUILD
+++ b/appstream-glib/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=0.7.18
 pkgrel=2
 pkgdesc="Objects and methods for reading and writing AppStream metadata"
 url="https://people.freedesktop.org/~hughsient/appstream-glib/"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(LGPL)
 depends=(gtk3 libyaml pacman gcab libsoup libstemmer)
 makedepends=(gobject-introspection gtk-doc git gperf meson)
