--- a/flatpak/PKGBUILD
+++ b/flatpak/PKGBUILD
@@ -4,17 +4,19 @@
 # Contributor: Jan Alexander Steffens (heftig) <jan.steffens@gmail.com>
 
 pkgname=flatpak
-pkgver=1.12.1
+pkgver=1.12.6
 pkgrel=1
+epoch=1
 pkgdesc="Linux application sandboxing and distribution framework (formerly xdg-app)"
 url="https://flatpak.org"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(LGPL)
 depends=(dbus glib2 libsoup polkit libxau ostree json-glib libseccomp libarchive
-         python bubblewrap appstream-glib xdg-dbus-proxy)
-makedepends=(intltool systemd gobject-introspection gtk-doc git docbook-xsl xmlto)
+         python bubblewrap appstream-glib xdg-dbus-proxy systemd)
+makedepends=(intltool gobject-introspection gtk-doc git docbook-xsl xmlto)
 checkdepends=(valgrind socat)
-_commit=afb3575d3113a8491af25af3bbc7bcf1cb5b9b33  # tags/1.12.1^0
+provides=(libflatpak.so)
+_commit=e49f5289bcff0bdfabb668a27f9a1ed5e775d71c  # tags/1.12.6^0
 source=("git+https://github.com/flatpak/flatpak#commit=$_commit"
         git+https://gitlab.gnome.org/GNOME/libglnx.git
         git+https://github.com/projectatomic/bubblewrap
@@ -30,12 +32,17 @@ sha256sums=('SKIP'
             '3371dd250e61d9e1633630073fefda153cd4426f72f4afa0c3373ae2e8fea03a'
             '1824cb4eb1cc88702cb2b9f1c55b6dfdf20fca5eab83f6e8e532099281328745')
 
+pkgver() {
+  cd flatpak
+  git describe --tags | sed 's/[^-]*-g/r&/;s/-/+/g'
+}
+
 prepare() {
-  cd $pkgname
+  cd flatpak
 
   git submodule init
-  git submodule set-url bubblewrap "$srcdir/bubblewrap"
   git submodule set-url libglnx "$srcdir/libglnx"
+  git submodule set-url bubblewrap "$srcdir/bubblewrap"
   git submodule set-url dbus-proxy "$srcdir/xdg-dbus-proxy"
   git submodule set-url variant-schema-compiler "$srcdir/variant-schema-compiler"
   git submodule update
@@ -46,13 +53,8 @@ prepare() {
   NOCONFIGURE=1 ./autogen.sh
 }
 
-pkgver() {
-  cd $pkgname
-  git describe --tags | sed 's/-/+/g'
-}
-
 build() {
-  cd $pkgname
+  cd flatpak
 
   ./configure \
     --prefix=/usr \
@@ -72,14 +74,14 @@ build() {
 }
 
 check() {
-  cd $pkgname
+  cd flatpak
   make -k check
 }
 
 package() {
   depends+=(xdg-desktop-portal)
 
-  make -C $pkgname DESTDIR="$pkgdir" install
+  make -C flatpak DESTDIR="$pkgdir" install
 
   install -Dt "$pkgdir/etc/profile.d" -m644 flatpak-bindir.sh
   install -Dt "$pkgdir/etc/flatpak/remotes.d" flathub.flatpakrepo
