--- a/xorg/xosd/PKGBUILD
+++ b/xorg/xosd/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=xosd
 pkgver=2.2.14
 pkgrel=10
 pkgdesc="Displays text on your screen. On-Screen-Display-libs for some tools"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('GPL2')
 url="https://sourceforge.net/projects/libxosd/"
 depends=('libxt' 'libxinerama' 'sh' 'xorg-fonts-misc')
