--- a/xorg/xorg-xwud/PKGBUILD
+++ b/xorg/xorg-xwud/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=xorg-xwud
 pkgver=1.0.5
 pkgrel=2
 pkgdesc="X Window System image undumping utility"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('libx11')
