--- a/xorg/xorg-xwininfo/PKGBUILD
+++ b/xorg/xorg-xwininfo/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=xorg-xwininfo
 pkgver=1.1.5
 pkgrel=2
 pkgdesc="Command-line utility to print information about windows on an X server"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('libxcb')
