--- a/xorg/xorg-xvinfo/PKGBUILD
+++ b/xorg/xorg-xvinfo/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=xorg-xvinfo
 pkgver=1.1.4
 pkgrel=2
 pkgdesc="Prints out the capabilities of any video adaptors associated with the display that are accessible through the X-Video extension"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('libx11' 'libxv')
