--- a/xorg/xorg-xvidtune/PKGBUILD
+++ b/xorg/xorg-xvidtune/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=xorg-xvidtune
 pkgver=1.0.3
 pkgrel=4
 pkgdesc="Video mode tuner for Xorg"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('libxxf86vm' 'libxt' 'libxaw' 'libxmu' 'libx11')
