--- a/xorg/xorg-xpr/PKGBUILD
+++ b/xorg/xorg-xpr/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=xorg-xpr
 pkgver=1.0.5
 pkgrel=2
 pkgdesc="Print an X window dump from xwd"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('libx11' 'libxmu' 'sh')
