--- a/xorg/xorg-xmessage/PKGBUILD
+++ b/xorg/xorg-xmessage/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=xorg-xmessage
 pkgver=1.0.5
 pkgrel=2
 pkgdesc="Display a message or query in a window"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('libxaw')
