--- a/xorg/xorg-xman/PKGBUILD
+++ b/xorg/xorg-xman/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=xorg-xman
 pkgver=1.1.5
 pkgrel=2
 pkgdesc="Unix manual page viewer"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('libxaw' 'libxt')
