--- a/xorg/xorg-xlsfonts/PKGBUILD
+++ b/xorg/xorg-xlsfonts/PKGBUILD
@@ -8,7 +8,7 @@ pkgrel=3
 pkgdesc='List available X fonts'
 url='https://xorg.freedesktop.org/'
 license=('custom')
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 depends=('libx11')
 makedepends=('xorg-util-macros')
 source=(https://xorg.freedesktop.org/archive/individual/app/xlsfonts-${pkgver}.tar.bz2{,.sig})
