--- a/xorg/xorg-xlsclients/PKGBUILD
+++ b/xorg/xorg-xlsclients/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=xorg-xlsclients
 pkgver=1.1.4
 pkgrel=2
 pkgdesc="List client applications running on a display"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('libxcb')
