--- a/xorg/xorg-xclipboard/PKGBUILD
+++ b/xorg/xorg-xclipboard/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=xorg-xclipboard
 pkgver=1.1.3
 pkgrel=3
 pkgdesc="X clipboard manager"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('libxaw' 'libxmu' 'libxt' 'libx11')
@@ -15,7 +15,7 @@ sha512sums=('84a51d11851756422eb23e67b2721d2bcb2ac248fa32c0837423b6169144dff7671
 
 build() {
   cd "${srcdir}/xclipboard-${pkgver}"
-  ./configure --prefix=/usr
+  ./configure --prefix=/usr --build=${CHOST}
   make
 }
 
