--- a/xorg/xorg-xlsatoms/PKGBUILD
+++ b/xorg/xorg-xlsatoms/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=xorg-xlsatoms
 pkgver=1.1.3
 pkgrel=2
 pkgdesc="List interned atoms defined on server"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('libxcb')
