--- a/xorg/xorg-xlogo/PKGBUILD
+++ b/xorg/xorg-xlogo/PKGBUILD
@@ -5,7 +5,8 @@ pkgname=xorg-xlogo
 pkgver=1.0.5
 pkgrel=2
 pkgdesc="Draw [old] X logo"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc)
+arch=(riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('libsm' 'libxaw' 'libxmu' 'libxt' 'libxext' 'libx11' 'libxrender' 'libxft')
