--- a/xorg/xorg-xkill/PKGBUILD
+++ b/xorg/xorg-xkill/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=xorg-xkill
 pkgver=1.0.5
 pkgrel=2
 pkgdesc="Kill a client by its X resource"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('libx11' 'libxmu')
