--- a/xorg/xorg-xkbutils/PKGBUILD
+++ b/xorg/xorg-xkbutils/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=xorg-xkbutils
 pkgver=1.0.4
 pkgrel=4
 pkgdesc="XKB utility demos"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('libxaw' 'libxt' 'libx11')
