--- a/xorg/xorg-xhost/PKGBUILD
+++ b/xorg/xorg-xhost/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=xorg-xhost
 pkgver=1.0.8
 pkgrel=2
 pkgdesc="Server access control program for X"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('libx11' 'libxmu')
