--- a/xorg/xorg-xgamma/PKGBUILD
+++ b/xorg/xorg-xgamma/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=xorg-xgamma
 pkgver=1.0.6
 pkgrel=3
 pkgdesc="Alter a monitor's gamma correction"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('libx11' 'libxxf86vm')
@@ -18,7 +18,7 @@ validpgpkeys=('4A193C06D35E7C670FA4EF0BA2FB9E081F2D130E') # Alan Coopersmith <al
 
 build() {
   cd xgamma-${pkgver}
-  ./configure --prefix=/usr
+  ./configure --prefix=/usr --build=${CHOST}
   make
 }
 
