--- a/xorg/xorg-xfontsel/PKGBUILD
+++ b/xorg/xorg-xfontsel/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.0.6
 pkgrel=3
 pkgdesc='Point and click selection of X11 font names'
 url='https://xorg.freedesktop.org/'
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('custom')
 makedepends=('xorg-util-macros')
 depends=('libxaw' 'libxmu' 'libxt' 'libx11')
