--- a/xorg/xorg-xfd/PKGBUILD
+++ b/xorg/xorg-xfd/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=xorg-xfd
 pkgver=1.1.3
 pkgrel=2
 pkgdesc="Displays all the characters in a font using either the X11 core protocol or libXft2"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('libxaw' 'fontconfig' 'libxft' 'libxrender' 'libxmu' 'libxkbfile')
