--- a/xorg/xorg-xeyes/PKGBUILD
+++ b/xorg/xorg-xeyes/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=xorg-xeyes
 pkgver=1.2.0
 pkgrel=1
 pkgdesc="Follow the mouse/SHAPE extension X demo"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('libx11' 'libxt' 'libxext' 'libxmu' 'libxrender' 'libxi')
