--- a/xorg/xorg-xev/PKGBUILD
+++ b/xorg/xorg-xev/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.2.4
 pkgrel=1
 pkgdesc='Print contents of X events'
 url='https://xorg.freedesktop.org/'
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('custom')
 depends=('libx11' 'libxrandr')
 makedepends=('xorg-util-macros' 'xorgproto')
