--- a/xorg/xorg-xedit/PKGBUILD
+++ b/xorg/xorg-xedit/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=xorg-xedit
 pkgver=1.2.2
 pkgrel=3
 pkgdesc="Simple text editor for X"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('libxaw' 'libxmu' 'libxt' 'libx11')
@@ -17,7 +17,7 @@ validpgpkeys=('3BB639E56F861FA2E86505690FDD682D974CA72A') # "Matt Turner <mattst
 
 build() {
   cd "${srcdir}/xedit-${pkgver}"
-  ./configure --prefix=/usr
+  ./configure --prefix=/usr --build=${CHOST}
   make
 }
 
