--- a/xorg/xorg-xdriinfo/PKGBUILD
+++ b/xorg/xorg-xdriinfo/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=xorg-xdriinfo
 pkgver=1.0.6
 pkgrel=2
 pkgdesc="Query configuration information of DRI drivers"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('libx11' 'libgl')
