--- a/xorg/xorg-xdpyinfo/PKGBUILD
+++ b/xorg/xorg-xdpyinfo/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=xorg-xdpyinfo
 pkgver=1.3.2
 pkgrel=4
 pkgdesc="Display information utility for X"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('libx11' 'libxext' 'libxtst' 'libxxf86vm' 'libxrender' 'libxcomposite' 'libxinerama')
@@ -19,7 +19,7 @@ validpgpkeys=('4A193C06D35E7C670FA4EF0BA2FB9E081F2D130E') # Alan Coopersmith <al
 
 build() {
   cd xdpyinfo-${pkgver}
-  ./configure --prefix=/usr
+  ./configure --prefix=/usr --build=${CHOST}
   make
 }
 
